# soilmodel

./: README.md  pyproject.toml
configs/: model_config.yaml
src/: main.py
src/api/routes/: chat.py  upload.py
src/api/utils/: auth.py  logger.py  middleware.py
src/config/: settings.py
src/core/: embeddings.py
src/core/data_processing/: loader.py  splitter.py
src/core/models/: base.py  vector_db.py
src/db/: database.py  models.py
tests/: test_data_processing.py
