[project]
name = "pyproject"
version = "0.1.0"
description = "基于LangChain的文档问答系统"
authors = [
    {name = "锋煊",email = "45615263+jinhuotu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.dependencies]
langchain-core = "0.3.54"
langchain-community = "0.3.21"
langchain-chroma = "0.2.3"
fastapi = "0.115.12"
openai = "1.75.0"
PyPDF2 = "3.0.1"
python-docx = "1.1.2"
sentence-transformers = "4.1.0"
python = ">=3.13,<4.0"
# 系统支持
uvicorn = { extras = ["standard"], version = "0.27.0" }
python-dotenv = "1.1.0"
httpx = "0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"